add docker container build

--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_HOST="172.16.238.11"
+DB_PORT="3306"
+DB_DATABASE=application
+DB_USERNAME=root
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=172.16.238.13
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
