--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">=7.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "sentry/sentry-laravel": "^1.0"
     },
