--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
-        "sentry/sentry-laravel": "^1.0"
+        "sentry/sentry-laravel": "^1.0",
+        "spatie/laravel-cors": "^1.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
