--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": ">=7.3",
         "fideloper/proxy": "^4.0",
+        "koenhoeijmakers/laravel-filterable": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
