--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "~8.0"
+        "phpunit/phpunit": "~8.0",
+        "ext-http": "*"
     },
     "config": {
         "optimize-autoloader": true,
