--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "~8.0",
-        "ext-http": "*"
+        "phpunit/phpunit": "~8.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -44,6 +43,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Support/helpers.php"
         ]
     },
     "autoload-dev": {
