--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,22 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.2",
         "koenhoeijmakers/headers": "^1.0",
         "koenhoeijmakers/laravel-filterable": "^4.2",
-        "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.2",
+        "laravel/framework": "^6.0",
+        "laravel/passport": "^7.4",
         "laravel/tinker": "^1.0",
-        "sentry/sentry-laravel": "^1.1",
-        "spatie/laravel-cors": "^1.5"
+        "sentry/sentry-laravel": "^1.2",
+        "spatie/laravel-cors": "^1.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/phpinsights": "^1.6",
-        "phpunit/phpunit": "~8.0"
+        "phpunit/phpunit": "^8.4"
     },
     "config": {
         "optimize-autoloader": true,
