--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - 80:80
     volumes:
       - ./:/var/www/
-      - ./docker/php7.3-apache/php.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./.docker/php7.3-apache/php.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - default
 
