--- a/.docker/php7.4-apache/Dockerfile
+++ b/.docker/php7.4-apache/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get install -y \
     && pecl install xdebug \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd mbstring zip mysqli pdo_mysql gmp \
-    && docker-php-ext-enable xdebug
+    && docker-php-ext-enable xdebug \
     && docker-php-source delete
 
 # Create working directory
