--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,13 @@ DB_USERNAME=root
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+
+REDIS_DB=0
+REDIS_CACHE_DB=1
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
