--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,8 @@
         "fideloper/proxy": "^4.2",
         "koenhoeijmakers/headers": "^1.0",
         "koenhoeijmakers/laravel-filterable": "^4.3",
-        "laravel/framework": "^6.6",
-        "laravel/passport": "^8.0",
-        "laravel/tinker": "^2.0",
+        "laravel/framework": "^6.12",
+        "laravel/tinker": "^2.1",
         "sentry/sentry-laravel": "^1.5",
         "spatie/laravel-cors": "^1.6"
     },
@@ -25,7 +24,7 @@
         "mockery/mockery": "^1.3",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/phpinsights": "^1.11",
-        "phpunit/phpunit": "^8.4"
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
@@ -45,9 +44,7 @@
             "database/seeds",
             "database/factories"
         ],
-        "files": [
-            "app/Support/helpers.php"
-        ]
+        "files": []
     },
     "autoload-dev": {
         "psr-4": {
