--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,13 @@
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.3",
+        "facade/ignition": "^1.16",
         "fzaninotto/faker": "^1.9",
         "mockery/mockery": "^1.3",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/phpinsights": "^1.11",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "roave/security-advisories": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
