--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,12 +1,13 @@
-# Do not leak headers.
-Header unset X-Powered-By
-Header unset Server
+<IfModule mod_headers.c>
+    Header unset X-Powered-By
+    Header unset Server
 
-Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains" env=HTTPS
-Header always set X-XSS-Protection "1; mode=block"
-Header always set X-Frame-Options SAMEORIGIN
-Header always set X-Content-Type-Options nosniff
-Header always set Referrer-Policy Same-Origin
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains" env=HTTPS
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set X-Frame-Options SAMEORIGIN
+    Header always set X-Content-Type-Options nosniff
+    Header always set Referrer-Policy Same-Origin
+</IfModule>
 
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
