--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,20 @@
     "require": {
         "php": ">=7.4",
         "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.5",
         "koenhoeijmakers/headers": "^1.0",
         "koenhoeijmakers/laravel-filterable": "^4.3",
-        "laravel/framework": "^6.12",
+        "laravel/framework": "^7.0",
         "laravel/tinker": "^2.1",
-        "sentry/sentry-laravel": "^1.5",
-        "spatie/laravel-cors": "^1.6"
+        "sentry/sentry-laravel": "^1.7"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.3",
-        "facade/ignition": "^1.16",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9",
         "mockery/mockery": "^1.3",
-        "nunomaduro/collision": "^3.0",
-        "nunomaduro/phpinsights": "^1.11",
-        "phpunit/phpunit": "^8.5",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^9.0",
         "roave/security-advisories": "dev-master",
         "ext-json": "*"
     },
