--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,11 @@
         "sentry/sentry-laravel": "^1.7"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9",
-        "mockery/mockery": "^1.3",
+        "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^4.2",
-        "phpunit/phpunit": "^9.1",
-        "roave/security-advisories": "dev-master",
-        "ext-json": "*"
+        "phpunit/phpunit": "^9.2",
+        "roave/security-advisories": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
