--- a/composer.json
+++ b/composer.json
@@ -10,21 +10,25 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4",
-        "fideloper/proxy": "^4.3",
+        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.5",
+        "guzzlehttp/guzzle": "^7.0.1",
         "koenhoeijmakers/headers": "^1.0",
-        "koenhoeijmakers/laravel-filterable": "^4.4",
-        "laravel/framework": "^7.11",
+        "koenhoeijmakers/laravel-filterable": "^4.5",
+        "laravel/framework": "^8.0",
         "laravel/tinker": "^2.4",
-        "sentry/sentry-laravel": "^1.7"
+        "sentry/sentry-laravel": "^1.9",
+        "php-http/curl-client": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
         "mockery/mockery": "^1.4",
-        "nunomaduro/collision": "^4.2",
-        "phpunit/phpunit": "^9.2",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3",
         "roave/security-advisories": "dev-master"
+    },
+    "replace": {
+        "php-http/guzzle6-adapter": "*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -38,13 +42,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
-        "files": []
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
