feat(Docker): Add default user id and name to docker. This prevents issues when creating files through artisan or logs that are unaccessible by either the developer or the app. (Kudo's to @ibovangeffen for this fix.)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,11 @@ services:
       - default
 
   app:
-    build: .docker/php8.0-apache/
+    build:
+      context: .docker/php8.0-apache/
+      args:
+        user: king
+        uid: 1000
     restart: always
     container_name: app
     depends_on:
