--- a/.docker/php8.0-apache/Dockerfile
+++ b/.docker/php8.0-apache/Dockerfile
@@ -1,4 +1,6 @@
 FROM php:8.0-apache
+ARG user
+ARG uid
 
 RUN apt-get update \
     && apt-get upgrade -y \
@@ -33,6 +35,11 @@ ENV APACHE_DOCUMENT_ROOT /var/www/public
 # Install composer from image. You may change it to the latest
 COPY --from=composer:2.0 /usr/bin/composer /usr/bin/composer
 
+# Create system user to run Composer and Artisan Commands
+RUN useradd -G www-data,root -u $uid -d /home/$user $user
+RUN mkdir -p /home/$user/.composer && \
+    chown -R $user:$user /home/$user
+
 WORKDIR /var/www
 
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
@@ -45,4 +52,8 @@ RUN echo 'alias refresh="pa migrate:fresh"' >> ~/.bashrc
 
 # make laravel feel comfortable with mod-rewrite
 RUN a2enmod rewrite && service apache2 restart
+
+# Set the user
+USER $user
+
 EXPOSE 80
