feat(Docker): Add Alpine / Nginx / PHP-FPM8 docker file and update docker-compose to use that instead of apache. But keep apache as a backup...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,13 @@ services:
 
   app:
     build:
-      context: .docker/php8.0-apache/
+
+      # Alpine / Nginx / PHP-FPM 8.0
+      context: .docker/php-fpm8-alpine/
+
+        # Ubuntu / Apache / PHP 8.0
+        #      context: .docker/php8.0-apache/
+        # (don't forget the volume)
       args:
         user: king
         uid: 1000
@@ -47,9 +53,11 @@ services:
       - redis
     ports:
       - 80:80
+    environment:
+      PORT: 80
     volumes:
       - ./:/var/www/
-      - ./.docker/php8.0-apache/php.ini:/usr/local/etc/php/conf.d/local.ini
+    #      - ./.docker/php8.0-apache/php.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - default
 
