feat(Docker): Updated alpine in docker. Should work with redis and XDebug. Haven't tested GD yet.

--- a/.docker/php8-fpm-alpine/nginx/nginx.conf
+++ b/.docker/php8-fpm-alpine/nginx/nginx.conf
@@ -1,6 +1,7 @@
 # /etc/nginx/nginx.conf
 #
 
+# This should be uncommented when running as a non-root user. It will be updated to the docker argument $user.
 user _USER_;
 
 # NGINX will run in the foreground
