--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,18 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=8.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
+        "php": "^8.1",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.3",
         "koenhoeijmakers/headers": "^1.0",
         "koenhoeijmakers/laravel-filterable": "^4.5",
-        "laravel/framework": "^8.46",
-        "laravel/tinker": "^2.6",
-        "sentry/sentry-laravel": "^2.6"
+        "laravel/framework": "^9",
+        "sentry/sentry-laravel": "^2.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.14",
         "mockery/mockery": "^1.4",
-        "nunomaduro/collision": "^5.4",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest"
     },
