--- a/.docker/php8.1-fpm-alpine/Dockerfile
+++ b/.docker/php8.1-fpm-alpine/Dockerfile
@@ -19,6 +19,7 @@ RUN \
 # Packages
 RUN apk update \
     && apk upgrade \
+    && apk add --update linux-headers \
     && apk add --no-cache \
         # gmp (arithmethic calculations)
         gmp-dev \
