--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,20 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "fruitcake/laravel-cors": "^3.0",
+        "php": "^8.2",
+        "doctrine/dbal": "^3.0",
+        "fruitcake/php-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.3",
         "koenhoeijmakers/headers": "^1.0",
-        "koenhoeijmakers/laravel-filterable": "^4.5",
-        "laravel/framework": "^9",
-        "sentry/sentry-laravel": "^2.12"
+        "koenhoeijmakers/laravel-filterable": "^6",
+        "laravel/framework": "^10",
+        "sentry/sentry-laravel": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.14",
         "mockery/mockery": "^1.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5",
+        "nunomaduro/collision": "^7.1",
+        "phpunit/phpunit": "^10",
         "roave/security-advisories": "dev-latest"
     },
     "config": {
