--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -35,7 +35,7 @@ jobs:
           coverage: none
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-interaction --no-suggest --no-progress
+        run: composer install --prefer-dist --no-interaction --no-progress
 
       - name: Start MariaDB
         run: sudo /etc/init.d/mysql start
