--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - default
 
   db:
-    image: mariadb:10
+    image: mysql:8
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     environment:
